@@ -3,7 +3,7 @@
  * Modeling and Simulation of Cloud Computing Infrastructures and Services.
  * http://cloudsimplus.org
  *
- *     Copyright (C) 2015-2018 Universidade da Beira Interior (UBI, Portugal) and
+ *     Copyright (C) 2015-2021 Universidade da Beira Interior (UBI, Portugal) and
  *     the Instituto Federal de Educação Ciência e Tecnologia do Tocantins (IFTO, Brazil).
  *
  *     This file is part of CloudSim Plus.
@@ -23,9 +23,6 @@
  */
 package org.cloudsimplus.testbeds;
 
-import org.apache.commons.lang3.StringUtils;
-import org.apache.commons.math3.distribution.TDistribution;
-import org.apache.commons.math3.exception.MathIllegalArgumentException;
 import org.apache.commons.math3.stat.descriptive.SummaryStatistics;
 import org.cloudbus.cloudsim.core.CloudSim;
 import org.cloudbus.cloudsim.distributions.ContinuousDistribution;
@@ -42,7 +39,7 @@ import java.util.function.Function;
 import java.util.stream.IntStream;
 import java.util.stream.Stream;
 
-import static java.util.stream.Collectors.joining;
+import static java.util.stream.Collectors.toCollection;
 import static java.util.stream.Collectors.toList;
 
 /**
@@ -54,12 +51,7 @@ import static java.util.stream.Collectors.toList;
  * @author Manoel Campos da Silva Filho
  * @since CloudSim Plus 1.0
  */
-public abstract class ExperimentRunner<T extends Experiment> extends AbstractExperiment {
-    /**
-     * The confidence level for computing confidence interval.
-     */
-    public static final double CONFIDENCE_LEVEL = 0.95;
-
+public abstract class ExperimentRunner<T extends Experiment> extends AbstractRunnable {
     /**@see #isParallel() */
     private final boolean parallel;
 
@@ -68,41 +60,29 @@ public abstract class ExperimentRunner<T extends Experiment> extends AbstractExp
 
     private int firstExperimentCreated = -1;
 
-    /**
-     * @see #getBaseSeed()
-     */
+    /** @see #getBaseSeed() */
     private final long baseSeed;
 
     /** List of seeds used for each experiment.
      * @see #addSeed(long)  */
     private final List<Long> seeds;
 
-    /**
-     * @see #getSimulationRuns()
-     */
+    /** @see #getSimulationRuns() */
     private int simulationRuns;
 
-    private AtomicInteger finishedRuns;
+    private final AtomicInteger finishedRuns;
 
-    /**
-     * @see #getExperimentsStartTimeSecs()
-     */
+    /** @see #getExperimentsStartTimeSecs() */
     private long experimentsStartTimeSecs;
 
-    /**
-     * @see #getExperimentsExecutionTimeSecs()
-     */
+    /** @see #getExperimentsExecutionTimeSecs() */
     private long experimentsExecutionTimeSecs;
 
-    /**
-     * @see #isApplyAntitheticVariatesTechnique()
-     */
-    private final boolean applyAntitheticVariatesTechnique;
+    /** @see #isApplyAntitheticVariates() */
+    private final boolean applyAntitheticVariates;
 
-    /**
-     * @see #getBatchesNumber()
-     */
-    private int batchesNumber;
+    /** @see #getBatchesNumber() */
+    private final int batchesNumber;
 
     /**
      * A Map containing a List of values for each metric to be computed.
@@ -120,10 +100,10 @@ public abstract class ExperimentRunner<T extends Experiment> extends AbstractExp
      */
     private final Map<String, List<Double>> metricsMap;
 
-    /**@see #setDescription(String) */
+    /** @see #setDescription(String) */
     private String description;
 
-    /**@see #setResultsTableId(String) */
+    /** @see #setResultsTableId(String) */
     private String resultsTableId;
 
     /** @see #enableLatexTableResultsGeneration()*/
@@ -157,11 +137,11 @@ public abstract class ExperimentRunner<T extends Experiment> extends AbstractExp
      * that runs sequentially.
      * @param baseSeed the seed to be used as base for each experiment seed
      * @param simulationRuns the number of times the experiment will be executed
-     * @param antitheticVariatesTechnique indicates if it's to be applied the
+     * @param applyAntitheticVariates indicates if it's to be applied the
      *                                    <a href="https://en.wikipedia.org/wiki/Antithetic_variates">antithetic variates technique</a>.
      */
-    protected ExperimentRunner(final long baseSeed, final int simulationRuns, final boolean antitheticVariatesTechnique) {
-        this(baseSeed, simulationRuns, 0, antitheticVariatesTechnique, false, false);
+    protected ExperimentRunner(final long baseSeed, final int simulationRuns, final boolean applyAntitheticVariates) {
+        this(baseSeed, simulationRuns, 0, applyAntitheticVariates, false, false);
     }
 
     /**
@@ -170,11 +150,11 @@ public abstract class ExperimentRunner<T extends Experiment> extends AbstractExp
      * @param baseSeed the seed to be used as base for each experiment seed
      * @param simulationRuns the number of times the experiment will be executed
      * @param batchesNumber number of simulation run batches (zero disables the batch means method)
-     * @param antitheticVariatesTechnique indicates if it's to be applied the
+     * @param applyAntitheticVariates indicates if it's to be applied the
      *                                    <a href="https://en.wikipedia.org/wiki/Antithetic_variates">antithetic variates technique</a>.
      */
-    protected ExperimentRunner(final long baseSeed, final int simulationRuns, final int batchesNumber, final boolean antitheticVariatesTechnique) {
-        this(baseSeed, simulationRuns, batchesNumber, antitheticVariatesTechnique, false, false);
+    protected ExperimentRunner(final long baseSeed, final int simulationRuns, final int batchesNumber, final boolean applyAntitheticVariates) {
+        this(baseSeed, simulationRuns, batchesNumber, applyAntitheticVariates, false, false);
     }
 
     /**
@@ -182,7 +162,7 @@ public abstract class ExperimentRunner<T extends Experiment> extends AbstractExp
      * @param baseSeed the seed to be used as base for each experiment seed
      * @param simulationRuns the number of times the experiment will be executed
      * @param batchesNumber number of simulation run batches (zero disables the batch means method)
-     * @param antitheticVariatesTechnique indicates if it's to be applied the
+     * @param applyAntitheticVariates indicates if it's to be applied the
      *                                    <a href="https://en.wikipedia.org/wiki/Antithetic_variates">antithetic variates technique</a>.
      * @param parallel whether experiments will run in parallel or sequentially. It's just actually enabled when the simulation runs
      *                 is larger than 1.
@@ -190,22 +170,18 @@ public abstract class ExperimentRunner<T extends Experiment> extends AbstractExp
      */
     protected ExperimentRunner(
         final long baseSeed, final int simulationRuns, final int batchesNumber,
-        final boolean antitheticVariatesTechnique,
+        final boolean applyAntitheticVariates,
         final boolean parallel, final boolean latexTableResultsGeneration)
     {
+        super();
         this.baseSeed = baseSeed;
-        this.applyAntitheticVariatesTechnique = antitheticVariatesTechnique;
-        if(simulationRuns <= 0)
-            throw new IllegalArgumentException("Simulation runs must be greater than 0.");
-        this.simulationRuns = simulationRuns;
+        this.applyAntitheticVariates = applyAntitheticVariates;
+        this.simulationRuns = validateSimulationRuns(simulationRuns);
         this.finishedRuns = new AtomicInteger();
         this.parallel = parallel && simulationRuns > 1;
         this.showProgress = true;
 
-        if(batchesNumber < 0 || batchesNumber == 1) {
-            throw new IllegalArgumentException("Batches number must be greater than 1. Use 0 just to disable the Batch Means method.");
-        }
-        this.batchesNumber = batchesNumber;
+        this.batchesNumber = validateBatchesNumber(batchesNumber);
         this.latexTableResultsGeneration = latexTableResultsGeneration;
 
         /*Since experiments may run in parallel and these fields are shared across them,
@@ -213,23 +189,37 @@ public abstract class ExperimentRunner<T extends Experiment> extends AbstractExp
         this.seeds = parallel ? Collections.synchronizedList(new ArrayList<>()) : new ArrayList<>();
         this.metricsMap = parallel ? Collections.synchronizedMap(new TreeMap<>()) : new TreeMap<>();
 
-        if (isApplyBatchMeansMethod() || isApplyAntitheticVariatesTechnique()) {
-            setSimulationRunsAndBatchesToEvenNumber();
+        setSimulationRunsAndBatchesToEvenNumber();
+        setNumberOfSimulationRunsAsMultipleOfNumberOfBatches();
+    }
+
+    private int validateBatchesNumber(final int batchesNumber) {
+        if(batchesNumber < 0 || batchesNumber == 1) {
+            throw new IllegalArgumentException("Batches number must be greater than 1. Use 0 just to disable the Batch Means method.");
         }
 
-        if (isApplyBatchMeansAndSimulationRunsIsNotMultipleOfBatches()) {
-            setNumberOfSimulationRunsAsMultipleOfNumberOfBatches();
+        return batchesNumber;
+    }
+
+    private int validateSimulationRuns(final int simulationRuns) {
+        if(simulationRuns <= 0) {
+            throw new IllegalArgumentException("Simulation runs must be greater than 0.");
         }
+
+        return simulationRuns;
     }
 
     /**
-     *
-     * Sets the number of simulation runs and batches to a even number. The
+     * Sets the number of simulation runs and batches to an even number. The
      * "Antithetic Variates Technique" for variance reduction requires an even
      * number of simulation runs. Accordingly, if the "Batch Means Method" is
      * used simultaneously, the number of batches has to be even.
      */
     private void setSimulationRunsAndBatchesToEvenNumber() {
+        if (!(isApplyBatchMeansMethod() || isApplyAntitheticVariates())) {
+            return;
+        }
+
         if (getSimulationRuns() % 2 != 0) {
             simulationRuns++;
         }
@@ -247,7 +237,9 @@ public abstract class ExperimentRunner<T extends Experiment> extends AbstractExp
      * will be even too.
      */
     private void setNumberOfSimulationRunsAsMultipleOfNumberOfBatches() {
-        simulationRuns = batchSizeCeil() * getBatchesNumber();
+        if (isApplyBatchMeansAndSimulationRunsIsNotMultipleOfBatches()) {
+            simulationRuns = batchSizeCeil() * getBatchesNumber();
+        }
     }
 
     /**
@@ -275,8 +267,8 @@ public abstract class ExperimentRunner<T extends Experiment> extends AbstractExp
      */
     public boolean isApplyBatchMeansMethod() {
         final boolean batchesGreaterThan1 = batchesNumber > 1;
-        final boolean numSimulationRunsGraterThanBatches = simulationRuns > batchesNumber;
-        return batchesGreaterThan1 && numSimulationRunsGraterThanBatches;
+        final boolean runsIsGraterThanBatches = simulationRuns > batchesNumber;
+        return batchesGreaterThan1 && runsIsGraterThanBatches;
     }
 
     /**
@@ -297,13 +289,14 @@ public abstract class ExperimentRunner<T extends Experiment> extends AbstractExp
             return samples;
         }
 
-        final List<Double> batchMeans = new ArrayList<>(getBatchesNumber());
+        final var batchMeans = new ArrayList<Double>(getBatchesNumber());
         for (int i = 0; i < getBatchesNumber(); i++) {
             batchMeans.add(getBatchAverage(samples, i));
         }
 
         System.out.printf(
-                "\tBatch Means Method applied. The number of samples was reduced to %d after computing the mean for each batch.%n", getBatchesNumber());
+            "\tBatch Means Method applied. The number of samples was reduced to %d after computing the mean for each batch.%n",
+            getBatchesNumber());
 
         return batchMeans;
     }
@@ -319,12 +312,12 @@ public abstract class ExperimentRunner<T extends Experiment> extends AbstractExp
      *
      * @param samples the list with samples to apply the "Batch Means Method".
      *                Samples size is defined by the {@link #getSimulationRuns()}.
-     * @param i the index of the batch to get it's values average
+     * @param index the index of the batch to get its values average
      * @return the average for the values of a given batch
      */
-    private double getBatchAverage(final List<Double> samples, final int i) {
+    private double getBatchAverage(final List<Double> samples, final int index) {
         final int k = batchSizeCeil();
-        return IntStream.range(0, k).mapToDouble(j -> samples.get(getBatchElementIndex(i, j))).average().orElse(0.0);
+        return IntStream.range(0, k).mapToDouble(j -> samples.get(getBatchElementIndex(index, j))).average().orElse(0.0);
     }
 
     /**
@@ -357,19 +350,19 @@ public abstract class ExperimentRunner<T extends Experiment> extends AbstractExp
      * @see
      * <a href="https://en.wikipedia.org/wiki/Antithetic_variates">Antithetic variates</a>
      */
-    public boolean isApplyAntitheticVariatesTechnique() {
-        return applyAntitheticVariatesTechnique;
+    public final boolean isApplyAntitheticVariates() {
+        return applyAntitheticVariates;
     }
 
     /**
      * Gets the number of times the experiment will be executed in order to get
      * values such as means and standard deviations. It has to be an even number
      * if the
-     * {@link #isApplyAntitheticVariatesTechnique() "Antithetic Variates Technique"}
+     * {@link #isApplyAntitheticVariates() "Antithetic Variates Technique"}
      * is to be used.
      * @return
      */
-    public int getSimulationRuns() {
+    public final int getSimulationRuns() {
         return simulationRuns;
     }
 
@@ -388,7 +381,8 @@ public abstract class ExperimentRunner<T extends Experiment> extends AbstractExp
      * @return
      */
     private ExperimentRunner setSimulationRunsAsMultipleOfBatchNumber() {
-         simulationRuns = getBatchesNumber() * (int)Math.ceil(getSimulationRuns() / getBatchesNumber());
+        final double batches = getBatchesNumber();
+        simulationRuns = (int)(batches * Math.ceil(simulationRuns / batches));
          return this;
     }
 
@@ -414,7 +408,7 @@ public abstract class ExperimentRunner<T extends Experiment> extends AbstractExp
         return baseSeed;
     }
 
-    long getSeed(final int experimentIndex) {
+    public long getSeed(final int experimentIndex) {
         return seeds.get(experimentIndex);
     }
 
@@ -424,7 +418,7 @@ public abstract class ExperimentRunner<T extends Experiment> extends AbstractExp
      * This method calls that Function just providing the seed to be used for the current experiment run.
      *
      * If it is to apply the
-     * {@link #isApplyAntitheticVariatesTechnique() "Antithetic Variates Technique"}
+     * {@link #isApplyAntitheticVariates() "Antithetic Variates Technique"}
      * to reduce results variance, the second half of experiments will used the
      * seeds from the first half.
      *
@@ -435,7 +429,7 @@ public abstract class ExperimentRunner<T extends Experiment> extends AbstractExp
      * @see UniformDistr#isApplyAntitheticVariates()
      * @see #createRandomGen(int, double, double)
      */
-    public <T extends StatisticalDistribution> T createRandomGen(final int experimentIndex, final Function<Long, T> randomGenCreator) {
+    public <S extends StatisticalDistribution> S createRandomGen(final int experimentIndex, final Function<Long, S> randomGenCreator) {
         Objects.requireNonNull(randomGenCreator, "The Function to instantiate the Random Number Generator cannot be null.");
 
         if(seeds.isEmpty()){
@@ -445,7 +439,7 @@ public abstract class ExperimentRunner<T extends Experiment> extends AbstractExp
 
         if (isToReuseSeedFromFirstHalfOfExperiments(experimentIndex)) {
             final int expIndexFromFirstHalf = experimentIndex - halfSimulationRuns();
-            final T prng = randomGenCreator.apply(getSeed(expIndexFromFirstHalf));
+            final S prng = randomGenCreator.apply(getSeed(expIndexFromFirstHalf));
             prng.setApplyAntitheticVariates(true);
             return prng;
         }
@@ -456,7 +450,7 @@ public abstract class ExperimentRunner<T extends Experiment> extends AbstractExp
     /**
      * Creates a pseudo random number generator (PRNG) for a experiment run that
      * generates uniform values between [0 and 1[. If it is to apply the
-     * {@link #isApplyAntitheticVariatesTechnique() "Antithetic Variates Technique"}
+     * {@link #isApplyAntitheticVariates() "Antithetic Variates Technique"}
      * to reduce results variance, the second half of experiments will used the
      * seeds from the first half.
      *
@@ -473,7 +467,7 @@ public abstract class ExperimentRunner<T extends Experiment> extends AbstractExp
     /**
      * Creates a pseudo random number generator (PRNG) for a experiment run that
      * generates uniform values between [min and max[. If it is to apply the
-     * {@link #isApplyAntitheticVariatesTechnique() "Antithetic Variates Technique"}
+     * {@link #isApplyAntitheticVariates() "Antithetic Variates Technique"}
      * to reduce results' variance, the second half of experiments will use the
      * seeds from the first half.
      *
@@ -492,7 +486,7 @@ public abstract class ExperimentRunner<T extends Experiment> extends AbstractExp
     }
 
     public boolean isToReuseSeedFromFirstHalfOfExperiments(final int currentExperimentIndex) {
-        return isApplyAntitheticVariatesTechnique() &&
+        return isApplyAntitheticVariates() &&
                simulationRuns > 1 && currentExperimentIndex >= halfSimulationRuns();
     }
 
@@ -541,7 +535,7 @@ public abstract class ExperimentRunner<T extends Experiment> extends AbstractExp
         System.out.printf(
             "Started %s for %d %s using %s (real local time: %s)%n",
             getClass().getSimpleName(), simulationRuns, runWord, CloudSim.VERSION, LocalTime.now());
-        if(description != null && !description.trim().isEmpty()){
+        if(description != null && !description.isBlank()){
             System.out.println(description);
         }
         printSimulationParameters();
@@ -577,67 +571,15 @@ public abstract class ExperimentRunner<T extends Experiment> extends AbstractExp
     }
 
     private void computeAndPrintFinalResults() {
-        final Map<String, SummaryStatistics> statsMap = new TreeMap<>();
-        metricsMap.entrySet().forEach(e -> statsMap.put(e.getKey(), computeAndPrintFinalResults(e)));
-        buildLatexMetricsResultTable(statsMap);
-    }
+        final List<ConfidenceInterval> confidenceIntervals =
+            metricsMap.entrySet()
+                      .stream()
+                      .map(this::computeFinalResults)
+                      .collect(toCollection(() -> new ArrayList<>(metricsMap.size())));
 
-    /**
-     * Generates the latex table for metrics results.
-     * @param statsMap a Map where each key is a metric name and it value is
-     *                 a statistics object summarizing the metric results for all
-     *                 simulation runs.
-     */
-    private void buildLatexMetricsResultTable(final Map<String, SummaryStatistics> statsMap) {
-        if(!latexTableResultsGeneration) {
-            return;
-        }
-
-        if (simulationRuns == 1) {
-            System.out.println("Latex table with metrics' results is just built when the number of simulation runs is greater than 1.");
-            return;
-        }
-
-        final StringBuilder latex = startLatexTable();
-        statsMap.forEach((metric, stats) -> latexRow(latex, metric, stats));
-        latex.append("  \\end{tabular}\n").append("\\end{table}\n");
-        System.out.println();
-        System.out.println(latex);
-    }
-
-    /**
-     * Creates a row for the latex table containing the result metrics
-     * @param latex the StringBuilder where the latex table is being built
-     * @param metricName the name of the current metric to be presented as a table row
-     * @param stats summary statistics for this metric
-     */
-    private void latexRow(final StringBuilder latex, final String metricName, final SummaryStatistics stats) {
-        //if there is only one metric sample, it doesn't show the ± symbol (latex \pm), since there is no error margin
-        final String errorMargin =
-            confidenceErrorMargin(stats)
-                .map(margin -> String.format("$\\pm$ & %.2f", margin))
-                .orElse(" & ");
-
-        //If there is a % in the metric name, that needs to be escaped to show on Latex, since % starts a Latex comment
-        final String escapedMetricName = StringUtils.replace(metricName,"%", "\\%");
-        latex.append(escapedMetricName)
-             .append(" & ")
-             .append(String.format("%.2f", stats.getMean()))
-             .append(errorMargin)
-             .append(" & ")
-             .append(String.format("%.2f", stats.getStandardDeviation()))
-             .append("\\\\ \\hline\n");
-    }
-
-    private StringBuilder startLatexTable() {
-        final StringBuilder latex = new StringBuilder();
-        latex.append("\\begin{table}[!hbt]\n")
-             .append(String.format("  \\caption{%s}\n", description))
-             .append(String.format("  \\label{%s}\n", resultsTableId))
-             .append("  \\begin{tabular}{|p{2.8cm}|p{1.3cm}p{1.3cm}|>{\\raggedleft\\arraybackslash}p{1.2cm}|}\n")
-             .append("      \\hline\n")
-             .append("      \\textbf{Metric} & \\multicolumn{2}{p{3.0cm}|}{\\textbf{95\\% Confidence Interval}} & \\textbf{*Std. Dev.} \\\\ \\hline\n");
-        return latex;
+        final var table = new ResultTable<>(this, confidenceIntervals);
+        table.buildLatexMetricsResultTable();
+        table.buildCsvResultsTable();
     }
 
     private Stream<Experiment> getStream(final List<Experiment> experiments) {
@@ -647,174 +589,59 @@ public abstract class ExperimentRunner<T extends Experiment> extends AbstractExp
     /**
      * Template method that creates an experiment to be run for the i'th time.
      *
-     * @param i a number that identifies the experiment
+     * @param index a number that identifies the experiment
      * @return the created experiment
      * @see #createExperimentInternal(int)
      */
-    private Experiment createExperiment(final int i) {
-        print(((i + 1) % 100 == 0 ? String.format(". Run #%d%n", i + 1) : "."));
-        setFirstExperimentCreated(i);
-        return createExperimentInternal(i);
+    private Experiment createExperiment(final int index) {
+        print((index + 1) % 100 == 0 ? String.format(". Run #%d%n", index + 1) : ".");
+        setFirstExperimentCreated(index);
+        return createExperimentInternal(index);
     }
 
     /**
      * Creates an experiment to be run for the i'th time.
      *
-     * @param i a number that identifies the experiment
+     * @param index a number that identifies the experiment
      * @return the created experiment
      * @see #createExperiment(int)
      */
-    protected abstract T createExperimentInternal(final int i);
+    protected abstract T createExperimentInternal(int index);
 
     /**
-     * Computes and prints final simulation results, including mean, standard deviations and
+     * Computes final simulation results, including mean, standard deviations and
      * confidence intervals for a given metric computed across all simulation runs.
      *
      * @param metricEntry a map entry represented by the name of the metric and
      *                    its list of values across multiple simulation runs
-     * @return the computed {@link SummaryStatistics} from the provided values for the metric
+     * @return the computed {@link ConfidenceInterval} from the provided values for the metric
      */
-    protected SummaryStatistics computeAndPrintFinalResults(final Map.Entry<String, List<Double>> metricEntry){
+    protected ConfidenceInterval computeFinalResults(final Map.Entry<String, List<Double>> metricEntry){
         final List<Double> metricValues = metricEntry.getValue();
         final SummaryStatistics stats = computeFinalStatistics(metricValues);
-        final String valuesStr = metricValues.stream().map(v -> String.format("%.2f", v)).collect(joining(", "));
-        final String sampleWord = metricValues.size() > 1 ? "samples" : "sample";
-        System.out.printf(
-            "# %s: %.6f (%d %s: %s)%n",
-            metricEntry.getKey(), stats.getMean(),
-            metricValues.size(), sampleWord, valuesStr);
+        //System.out.printf("# %s: %.6f (%d %s)%n", metricEntry.getKey(), stats.getMean(), metricValues.size(), metricValues.size() > 1 ? "samples" : "sample");
 
-        if (simulationRuns > 1) {
-            showConfidenceInterval(stats);
-        }
-
-        return stats;
+        return new ConfidenceInterval(stats, metricEntry.getKey());
     }
 
     /**
-     * Creates a SummaryStatistics object from a list of
-     * Double values, allowing computation of statistics
-     * such as mean over these values.
+     * Creates a {@link SummaryStatistics} object from a list of
+     * Double values, allowing computation of statistics such as mean over these values.
      * The method also checks if the
-     * {@link #isApplyAntitheticVariatesTechnique() Antithetic Variates}
+     * {@link #isApplyAntitheticVariates() Antithetic Variates}
      * and the {@link #isApplyBatchMeansMethod() Batch Means} techniques
-     * are enabled and then apply them over the given list of Doubles.
+     * are enabled, applying them over the given list of Doubles.
      * These techniques are used for variance reduction.
      *
      * @param values the List of values to add to the {@link SummaryStatistics} object
      * @return the {@link SummaryStatistics} object containing
-     * the double values, after applying the the techniques for
-     * variance reduction.
+     * the double values, after applying the techniques for variance reduction.
      */
     protected final SummaryStatistics computeFinalStatistics(final List<Double> values) {
-        final SummaryStatistics stats = new SummaryStatistics();
+        final var stats = new SummaryStatistics();
         final List<Double> adjustedValues = computeAntitheticMeans(computeBatchMeans(values));
         adjustedValues.forEach(stats::addValue);
         return stats;
-    }
-
-    /**
-     * Shows confidence interval for the average value of a given metric for all executed simulations.
-     * @param stats a {@link SummaryStatistics} computed from the list of values for a metric across all simulation runs
-     * @see #computeFinalStatistics(List)
-     */
-    private void showConfidenceInterval(final SummaryStatistics stats) {
-        // Computes 95% confidence interval
-        final Optional<Double> optional = confidenceErrorMargin(stats);
-        if(optional.isPresent()) {
-            final double intervalSize = optional.get();
-            final double criticalValue = getConfidenceIntervalCriticalValue(stats.getN());
-            System.out.printf("\tt-Distribution critical value for %d samples: %f%n", stats.getN(), criticalValue);
-
-            final double lower = stats.getMean() - intervalSize;
-            final double upper = stats.getMean() + intervalSize;
-            System.out.printf(
-                "\t95%% Confidence Interval: %.4f ∓ %.4f, that is [%.4f to %.4f]%n",
-                stats.getMean(), intervalSize, lower, upper);
-        }
-        else System.out.printf("\tValue for %d sample: %.4f%n", stats.getN(), stats.getMean());
-
-        System.out.printf("\tStandard Deviation: %.4f%n", stats.getStandardDeviation());
-    }
-
-    /**
-     * <p>
-     * Computes the confidence interval error margin for a given set of samples
-     * in order to enable finding the interval lower and upper bound around a
-     * mean value. By this way, the confidence interval can be computed as [mean
-     * + errorMargin .. mean - errorMargin].
-     * </p>
-     *
-     * <p>
-     * To reduce the confidence interval by half, one have to execute the
-     * experiments 4 more times. This is called the "Replication Method" and
-     * just works when the samples are i.i.d. (independent and identically
-     * distributed). Thus, if you have correlation between samples of each
-     * simulation run, a different method such as a bias compensation,
-     * {@link #isApplyBatchMeansMethod() batch means} or regenerative method has
-     * to be used. </p>
-     *
-     * <b>NOTE:</b> How to compute the error margin is a little bit confusing.
-     * The Harry Perros' book states that if less than 30 samples are collected,
-     * the t-Distribution has to be used to that purpose.
-     *
-     * However, this article
-     * <a href="https://en.wikipedia.org/wiki/Confidence_interval#Basic_Steps">Wikipedia
-     * article</a>
-     * says that if the standard deviation of the real population is known, it
-     * has to be used the z-value from the Standard Normal Distribution.
-     * Otherwise, it has to be used the t-value from the t-Distribution to
-     * calculate the critical value for defining the error margin (also called
-     * standard error). The book "Numeric Computation and Statistical Data
-     * Analysis on the Java Platform" confirms the last statement and such
-     * approach was followed.
-     *
-     * @param stats the statistic object with the values to compute the error
-     * margin of the confidence interval
-     * @return the error margin to compute the lower and upper bound of the
-     * confidence interval
-     *
-     * @see
-     * <a href="http://www.itl.nist.gov/div898/handbook/eda/section3/eda3672.htm">Critical
-     * Values of the Student's t Distribution</a>
-     * @see
-     * <a href="https://en.wikipedia.org/wiki/Student%27s_t-distribution">t-Distribution</a>
-     * @see <a href="http://www4.ncsu.edu/~hp/files/simulation.pdf">Harry
-     * Perros, "Computer Simulation Techniques: The definitive introduction!,"
-     * 2009</a>
-     * @see <a href="http://www.springer.com/gp/book/9783319285290">Numeric
-     * Computation and Statistical Data Analysis on the Java Platform</a>
-     */
-    protected Optional<Double> confidenceErrorMargin(final SummaryStatistics stats) {
-        final long samples = stats.getN();
-        if(samples < 1)
-            return Optional.empty();
-
-        try {
-            final double criticalValue = getConfidenceIntervalCriticalValue(samples);
-            return Optional.of(criticalValue * stats.getStandardDeviation() / Math.sqrt(samples));
-        } catch (MathIllegalArgumentException e) {
-            return Optional.empty();
-        }
-    }
-
-    /**
-     * Computes the confidence interval critical value for a given number of samples and conficende level.
-     * @param samples number of collected samples
-     * @return
-     */
-    private double getConfidenceIntervalCriticalValue(final long samples) {
-        /* Creates a T-Distribution with N-1 degrees of freedom
-        * since were are computing the sample's confidence interval
-        * instead of the entire population. */
-        final double freedomDegrees = samples - 1;
-
-        /* The t-Distribution is used to determine the probability that
-        the real population mean lies in a given interval. */
-        final TDistribution tDist = new TDistribution(freedomDegrees);
-        final double significance = 1.0 - CONFIDENCE_LEVEL;
-        final double criticalValue = tDist.inverseCumulativeProbability(1.0 - significance / 2.0);
-        return criticalValue;
     }
 
     /**
@@ -842,7 +669,7 @@ public abstract class ExperimentRunner<T extends Experiment> extends AbstractExp
     /**
      * <p>
      * Computes the antithetic means for the given samples if the
-     * {@link #isApplyAntitheticVariatesTechnique() "Antithetic Variates Technique" is to be applied}.
+     * {@link #isApplyAntitheticVariates() "Antithetic Variates Technique" is to be applied}.
      *
      * These values are the mean between the first half of samples with the
      * second half. By this way, the resulting value is an array with half of
@@ -861,7 +688,7 @@ public abstract class ExperimentRunner<T extends Experiment> extends AbstractExp
      * @see #createRandomGen(int, double, double)
      */
     protected List<Double> computeAntitheticMeans(final List<Double> samples) {
-        if (!isApplyAntitheticVariatesTechnique()) {
+        if (!isApplyAntitheticVariates()) {
             return samples;
         }
 
@@ -901,6 +728,10 @@ public abstract class ExperimentRunner<T extends Experiment> extends AbstractExp
         return this;
     }
 
+    public String getDescription() {
+        return description;
+    }
+
     /**
      * An id used to identify the experiment results table generated in formats such as Latex
      * for computed metrics.
@@ -912,6 +743,10 @@ public abstract class ExperimentRunner<T extends Experiment> extends AbstractExp
         return this;
     }
 
+    public String getResultsTableId() {
+        return resultsTableId;
+    }
+
     /**
      * Enables the generation of a result table in Latex format for computed metrics.
      * @return
@@ -919,6 +754,14 @@ public abstract class ExperimentRunner<T extends Experiment> extends AbstractExp
     public ExperimentRunner enableLatexTableResultsGeneration(){
         this.latexTableResultsGeneration = true;
         return this;
+    }
+
+    /**
+     * Checks if generation of a result table in Latex format for computed metrics is enabled.
+     * @return
+     */
+    public boolean isLatexTableResultsGeneration() {
+        return latexTableResultsGeneration;
     }
 
     /**
